changed the index.html section part

--- a/Index.html
+++ b/Index.html
@@ -84,7 +84,7 @@
     <script type="module" src="/src/main.tsx"></script>
 
     <!-- SEO-Friendly Content -->
-    <section style="display: none">
+    <section class="visually-hidden">
       <h1>Thirupathi Padidepu - Full Stack .NET & React Developer</h1>
       <p>
         Welcome to the portfolio of Thirupathi Padidepu, also known as
