--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-      Thirupathi Padidepu | Full Stack .NET & React Developer | Freelancer
-      Portfolio
+      Venkata Suresh Mallela | DevOps Engineer
     </title>
     <meta
       name="description"
