Modified the required Sections

--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
       Venkata Suresh Mallela | DevOps Engineer
-    </title>    
+    </title>
+
+    <!-- ✅ Custom Favicon -->
+    <link rel="icon" type="image/image" href="/vms.png" />
   </head>
 
   <body>
-    <!-- React App Root -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-  
 </html>
